--- a/templates/addDocument.html
+++ b/templates/addDocument.html
@@ -1,9 +1,16 @@
 {% extends 'index.html' %}
 
 {% block main %}
+    <nav class="nav">
+        <a href="/home">Home</a>
+        <h4>Cybersoft Document Management System</h4>
+        <a href="/logout" class="btn-add">Logout</a>
+    </nav>
     <div>
         <form action="/addDocument/" method="POST" class="add-form">
             {%csrf_token%}
+            <label for="field" class="form-label">Directory:</label>
+            <input type="text" name="field" class="form-control">
             <label for="document_name" class="form-label">Document Name:</label>
             <input type="text" name="document_name" class="form-control">
             <label for="version" class="form-label">Version:</label>
